Shenandoah: HdrSeq asserts "sub-bucket index (512) overflow for value ( 1.00)"

XMLWordPrintable

    • gc
    • b02

        HdrSeq in shenandoahNumberSeq.cpp asserts:

        # after -XX: or in .hotspotrc: SuppressErrorAt=/shenandoahNumberSeq.cpp:91
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/ysr/workplace/ysr/github/ysr-jdk/jdk/src/hotspot/share/gc/shenandoah/shenandoahNumberSeq.cpp:91), pid=46750, tid=46750
        # assert(false) failed: sub-bucket index (512) overflow for value ( 1.00)
        #
        # JRE version: OpenJDK Runtime Environment (20.0) (slowdebug build 20-internal-adhoc.ysr.jdk)
        # Java VM: OpenJDK 64-Bit Server VM (slowdebug 20-internal-adhoc.ysr.jdk, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x159950c] HdrSeq::add(double)+0x23a
        #
        # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #

              Assignee:
              Y. Ramakrishna
              Reporter:
              Y. Ramakrishna
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: