8298138: Shenandoah: HdrSeq asserts "sub-bucket index (512) overflow for value ( 1.00)"

Reviewed-by: rkennke, shade